// Generated from migrations 001–012.
// Compatible dbdiagram.io — tables, colonnes, clés étrangères uniquement.
// RLS, index, fonctions et contraintes CHECK omis (non supportés en DBML).
// NOTE : auth_users est une table gérée par Supabase (schéma auth).

Table auth_users [note: 'Supabase managed — schéma auth'] {
  id uuid [pk]
}

Table accounts {
  id                   uuid        [pk, default: `gen_random_uuid()`]
  created_at           timestamptz [default: `now()`]
  user_id              uuid        [ref: > auth_users.id]
  email                text
  owner_phone          text
  city                 text
  specialty            text        [default: 'electricien']
  onboarding_completed boolean     [default: false]
  is_admin             boolean     [default: false]
  artisan_name         text
  first_name           text
  last_name            text
  company_name         text
  welcome_message      text
  assistant_name       text
  score_threshold      integer     [default: 0]
  callback_delay       text        [default: '24h']
  pro_phone            text
}

Table phone_numbers {
  id         uuid        [pk, default: `gen_random_uuid()`]
  e164       text        [not null, unique]
  account_id uuid        [not null, ref: > accounts.id]
  active     boolean     [not null, default: false]
  created_at timestamptz [default: `now()`]
}

Table leads {
  id                 uuid        [pk, default: `gen_random_uuid()`]
  created_at         timestamptz [default: `now()`]
  updated_at         timestamptz [default: `now()`]
  account_id         uuid        [not null, ref: > accounts.id]
  status             text        [not null, default: 'a_traiter', note: 'a_traiter | incomplet | traite']
  client_phone       text
  full_name          text
  type_code          text
  delay_code         text
  priority_score     integer
  address            text
  description        text
  source             text        [note: 'voice | sms']
  is_dangerous       boolean     [note: 'supersédé par danger_level (mig. 006)']
  estimated_scope    text        [note: 'supersédé par scope (mig. 006)']
  twilio_call_sid    text
  danger_level       text        [not null, default: 'none', note: 'none | low | medium | high | critical']
  scope              text        [note: 'small | medium | large']
  availability_notes text
  parsing_confidence float
  reminder_sent_at   timestamptz
}

Table calls {
  id              uuid        [pk, default: `gen_random_uuid()`]
  created_at      timestamptz [default: `now()`]
  twilio_call_sid text        [unique]
  account_id      uuid        [ref: > accounts.id]
  direction       text
  from_number     text
  to_number       text
  started_at      timestamptz
  ended_at        timestamptz
  voice_ai_result jsonb
}

Table sms_messages {
  id                 uuid        [pk, default: `gen_random_uuid()`]
  created_at         timestamptz [default: `now()`]
  account_id         uuid        [ref: > accounts.id]
  direction          text
  body               text
  twilio_message_sid text
}

Table scoring_configs {
  specialty      text        [pk]
  type_weights   jsonb       [not null]
  delay_weights  jsonb       [not null]
  danger_weights jsonb       [not null]
  scope_weights  jsonb       [not null]
  type_code_map  jsonb       [not null]
  special_rules  jsonb       [not null]
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]
}

Table push_subscriptions {
  id           uuid        [pk, default: `gen_random_uuid()`]
  account_id   uuid        [not null, ref: > accounts.id]
  endpoint     text        [not null]
  subscription jsonb       [not null]
  platform     text        [not null, default: 'web', note: 'web | expo']
  created_at   timestamptz [not null, default: `now()`]
}

Ref: accounts.user_id > auth_users.id
Ref: phone_numbers.account_id > accounts.id
Ref: leads.account_id > accounts.id
Ref: calls.account_id > accounts.id
Ref: sms_messages.account_id > accounts.id
Ref: push_subscriptions.account_id > accounts.id
